# tntcxx

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  README.rst
.githooks/: pre-commit
.github/actions/build-tntcxx/: action.yml
.github/actions/setup-tarantool/: action.yml
.github/actions/test-tntcxx/: action.yml
.github/workflows/: debug.yml  linting.yml  push-translation.yml  reusable-testing.yml  testing.yml  ubuntu.yml
doc/: README.md  conf.py  crowdin.yaml  tntcxx_api.rst  tntcxx_getting_started.rst
doc/locale/ru/LC_MESSAGES/doc/: tntcxx_api.po  tntcxx_getting_started.po
docs/: client-design.md
examples/: CMakeLists.txt  Makefile  Reader.hpp  Schemaless.cpp  Simple.cpp  Sql.cpp
src/Buffer/: Buffer.hpp
src/Client/: Connection.hpp  Connector.hpp  DefaultNetProvider.hpp  EpollNetProvider.hpp  IprotoConstants.hpp  LibevNetProvider.hpp  NetworkEngine.hpp  RequestEncoder.hpp  ResponseDecoder.hpp  ResponseReader.hpp  Scramble.hpp  Stream.hpp  UnixPlainStream.hpp  UnixSSLStream.hpp  UnixStream.hpp
src/Client/libev/: ev++.h
src/Utils/: AddrInfo.hpp  Base64.hpp  CStr.hpp  Common.hpp  ItrRange.hpp  List.hpp  Logger.hpp  Mempool.hpp  ObjHolder.hpp  RefVector.hpp  Resource.hpp  Ring.hpp  Sha1.hpp  Timer.hpp  Traits.hpp  Wrappers.hpp  rlist.h
src/mpp/: ArgPath.hpp  BSwap.hpp  ClassRule.hpp  Common.hpp  Constants.hpp  ContAdapter.hpp  Dec.hpp  Enc.hpp  Object.hpp  Plan.hpp  Rules.hpp  Spec.hpp  Struct.hpp  Traits.hpp  Types.hpp  mpp.hpp
test/: Base64UnitTest.cpp  BufferGPerfTest.cpp  BufferPerfTest.cpp  BufferUnitTest.cpp  CStrUnitTest.cpp  ClientMultithreadTest.cpp  ClientPerfTest.cpp  ClientTest.cpp  CommonUnitTest.cpp  EncDecGPerfTest.cpp  EncDecTest.cpp  Helpers.hpp  ItrRangeUnitTest.cpp  ListUnitTest.cpp  MempoolUnitTest.cpp  RefVectorUnitTest.cpp  RingUnitTest.cpp  RulesUnitTest.cpp  TraitsUnitTest.cpp  cfg.lua  cfg_ssl.lua  gen_ssl.sh  hints.c  msgpuck.h
test/LinkTest/: IncludeHeaders.h  Main.cpp  Secondary.cpp
test/Utils/: Helpers.hpp  Out.hpp  PerfTimer.hpp  System.hpp  TupleReader.hpp  UserTuple.hpp
